# penumbra

./: .eslintrc.json  .gitignore  CLAUDE.md  README.md  eleventy.config.cjs  esbuild.cjs  esbuild.js  package-lock.json  package.json  rustfmt.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: cd.yaml  continuous-release.yaml
.husky/: pre-commit
benchmarks/: compare.mjs  wasm-bench.mjs
demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/src/: camera-controller.ts  main.ts  render-worker.ts  style.css
src/: bench.rs  camera.rs  canvas.rs  demo.rs  gherkin.ts  index.ts  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  mocha.ts  ray.rs  scene.rs  scene.ts  spec.ts  sphere.rs  transform.rs  tuple.rs  wasm  world.rs
src/demo/: phong_sphere.rs  sphere_shadow.rs
src/demo/pixel-clock/: messages.ts  worker.ts
src/demo/sphere-shadow/: worker.ts
src/demo/sphere-shadow-wasm/: index.ts  worker.ts
src/lib/: Example.spec.ts  Tuple.spec.ts  Tuple.ts  canvas.spec.ts  canvas.ts  equal.spec.ts  equal.ts  float32.ts  intersection.spec.ts  intersection.ts  matrix.spec.ts  matrix.ts  ray.spec.ts  ray.ts  sphere.spec.ts  sphere.ts  tuple.spec.ts  tuple.ts  two-dimenisonal-array.ts
src/lib/ui/: touch-pad.spec.ts  touch-pad.ts
src/lib/util/: equal.spec.ts
src/spec/: gherkin.ts  tests.ts
src/test/: gherkin.ts  setup.ts
src/www/: raf-polyfill.ts
src/www/components/: projectile-cannon.ts
src/www/pixel-clock/: index.ts
src/www/rum/: aws-rum.ts  index.ts  monitor-media.ts
src/www/spec/: index.ts  tests.ts
src/www/sphere-shadow/: index.ts
src/www/sphere-shadow-wasm/: messages.ts  worker.ts
src/www/video-on-demand/: VODEvent.ts  hls.ts  index.ts
wasm/: Cargo.toml
wasm/src/: bench.rs  canvas.rs  demo.rs  fuzzy.rs  intersection.rs  lib.rs  light.rs  matrix.rs  ray.rs  simd.rs  sphere.rs  tuple.rs
wasm/src/demo/: sphere_shadow.rs
www/: feed.njk  index.md  index.webc
www/_includes/components/: journal-entry-meta.webc
www/_includes/css/: hljs-github.css  penumbra.css  tokyo-night.css
www/_includes/layouts/: base.html  penumbra-base.webc  penumbra-journal-entry.webc  penumbra-page.webc
www/journal/: 001-nerd-sniped.md  002-one-more-yak.md  003-tuples.md  004-canvas-and-matrices.md
www/journal/003-tuples/: index.md
www/journal/004-canvas-and-matrices/: index.md
www/journal/005-ray-sphere-interactions/: index.md
www/journal/github-copilot/: index.md
www/tests/: index.md  runner.webc
