[package]
name = "penumbra"
version = "0.1.0"
authors = ["Eric McCarthy <eric@limulus.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
release = []
simd = []

[dependencies]
wasm-bindgen = "0.2.105"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.82"
features = ["console", "ImageData"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("wee_alloc"))'] }

[lints.clippy]
# Deny correctness issues (actual bugs)
correctness = "deny"
# Warn on suspicious code
suspicious = "warn"
# Performance improvements
perf = "warn"

[profile.release]
# Optimize for small code size (important for WASM)
opt-level = "z"
# Enable link-time optimization for better code size
lto = true
# Use a single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1
