[package]
name = "penumbra"
version = "0.1.0"
authors = ["Eric McCarthy <eric@limulus.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
release = []
simd = []

[dependencies]
wasm-bindgen = "0.2.105"
wide = "0.7.30"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.web-sys]
version = "0.3.82"
features = ["console", "ImageData"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("wee_alloc"))'] }

[lints.clippy]
# Deny correctness issues (actual bugs) - lower priority allows individual overrides
correctness = { level = "deny", priority = -1 }
# Warn on suspicious code - lower priority allows individual overrides
suspicious = { level = "warn", priority = -1 }
# Performance improvements - lower priority allows individual overrides
perf = { level = "warn", priority = -1 }

[profile.release]
# Optimize for small code size (important for WASM)
opt-level = "z"
# Enable link-time optimization for better code size
lto = true
# Use a single codegen unit for better optimization (slower compile, smaller binary)
codegen-units = 1
